--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ LANGSMITH_API_KEY=your_langsmith_api_key_here
 # Bokrah client configuration
 CLIENT_ID=bokrah_client_id_here
 API_TOKEN=bokrah_api_token_here
+JWT_SECRET
+JWT_ALGORITHM
