chore(deps): add PyJWT and python-dotenv for token handling and .env loading

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-langgraph
-langchain-core
+langgraph~=0.4.5
+langchain-core~=0.3.60
 langchain-community
-langchain-openai
-requests
-dotenv
+langchain-openai~=0.3.17
+requests~=2.32.3
+dotenv~=0.9.9
+fastapi~=0.115.12
+uvicorn
+pydantic~=2.11.4
+python-dotenv~=1.1.0
+typing_extensions~=4.13.2
+PyJWT~=2.10.1
+langchain~=0.3.25
