--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["graph", "nodes", "models", "agents", "prompts"]
